add progress to latex report for multimedia project

--- a/08_donnees_multimedia-part2/Project/report_latex/biblio.bib
+++ b/08_donnees_multimedia-part2/Project/report_latex/biblio.bib
@@ -77,3 +77,14 @@ wiki:hsv,
 	url = "http://fr.wikipedia.org/w/index.php?title=Teinte_Saturation_Valeur&oldid=125696736",
 	note = "[En ligne; Page disponible le 30-avril-2016]"
 }
+
+@article{opencv_library,
+    author = {Bradski, G.},
+    citeulike-article-id = {2236121},
+    journal = {Dr. Dobb's Journal of Software Tools},
+    keywords = {bibtex-import},
+    posted-at = {2008-01-15 19:21:54},
+    priority = {4},
+    title = {{The OpenCV Library}},
+    year = {2000}
+} 
