--- a/08_donnees_multimedia-part2/Project/report_latex/report.tex
+++ b/08_donnees_multimedia-part2/Project/report_latex/report.tex
@@ -91,9 +91,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 \ref{classeALL},\ref{classeMULTI},\ref{classeINTRO},\ref{classeCREDITS}).
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000089.jpg}
-\includegraphics[scale=0.3]{../data/00000159.jpg}
-\includegraphics[scale=0.3]{../data/00000176.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000089.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000159.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000176.jpg}
 \end{center}
 \caption{image de classe $M$}
 \label{classeM}
@@ -101,9 +101,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000105.jpg}
-\includegraphics[scale=0.3]{../data/00000106.jpg}
-\includegraphics[scale=0.3]{../data/00000107.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000105.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000106.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000107.jpg}
 \end{center}
 \caption{image de classe $A$}
 \label{classeA}
@@ -111,9 +111,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000147.jpg}
-\includegraphics[scale=0.3]{../data/00000148.jpg}
-\includegraphics[scale=0.3]{../data/00000149.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000147.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000148.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000149.jpg}
 \end{center}
 \caption{image de classe $B$}
 \label{classeB}
@@ -121,9 +121,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000165.jpg}
-\includegraphics[scale=0.3]{../data/00000166.jpg}
-\includegraphics[scale=0.3]{../data/00000167.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000165.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000166.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000167.jpg}
 \end{center}
 \caption{image de classe $C$}
 \label{classeC}
@@ -131,9 +131,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000288.jpg}
-\includegraphics[scale=0.3]{../data/00000289.jpg}
-\includegraphics[scale=0.3]{../data/00000290.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000288.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000289.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000290.jpg}
 \end{center}
 \caption{image de classe $D$}
 \label{classeD}
@@ -141,9 +141,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000179.jpg}
-\includegraphics[scale=0.3]{../data/00000203.jpg}
-\includegraphics[scale=0.3]{../data/00000239.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000179.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000203.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000239.jpg}
 \end{center}
 \caption{image de classe $ALL$}
 \label{classeALL}
@@ -151,9 +151,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000213.jpg}
-\includegraphics[scale=0.3]{../data/00000251.jpg}
-\includegraphics[scale=0.3]{../data/00000310.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000213.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000251.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000310.jpg}
 \end{center}
 \caption{image de classe $MULTI$}
 \label{classeMULTI}
@@ -161,9 +161,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00000013.jpg}
-\includegraphics[scale=0.3]{../data/00000024.jpg}
-\includegraphics[scale=0.3]{../data/00000041.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000013.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000024.jpg}
+\includegraphics[scale=0.3]{../data/frames/00000041.jpg}
 \end{center}
 \caption{image de classe $INTRO$}
 \label{classeINTRO}
@@ -171,9 +171,9 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes (Cf. figu
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{../data/00002344.jpg}
-\includegraphics[scale=0.3]{../data/00002348.jpg}
-\includegraphics[scale=0.3]{../data/00002350.jpg}
+\includegraphics[scale=0.3]{../data/frames/00002344.jpg}
+\includegraphics[scale=0.3]{../data/frames/00002348.jpg}
+\includegraphics[scale=0.3]{../data/frames/00002350.jpg}
 \end{center}
 \caption{image de classe $CREDITS$}
 \label{classeCREDITS}
@@ -201,11 +201,11 @@ Nous avons donc deux classes d'images $G$ et $L$ (respectivement 1491 et 761 ima
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.2]{../data/00000089.jpg}
-\includegraphics[scale=0.2]{../data/00000105.jpg}
-\includegraphics[scale=0.2]{../data/00000147.jpg}
-\includegraphics[scale=0.2]{../data/00000165.jpg}
-\includegraphics[scale=0.2]{../data/00000288.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000089.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000105.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000147.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000165.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000288.jpg}
 \end{center}
 \caption{image de classe $G$ (gros plan)}
 \label{classeG}
@@ -213,11 +213,11 @@ Nous avons donc deux classes d'images $G$ et $L$ (respectivement 1491 et 761 ima
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.2]{../data/00000336.jpg}
-\includegraphics[scale=0.2]{../data/00000394.jpg}
-\includegraphics[scale=0.2]{../data/00000458.jpg}
-\includegraphics[scale=0.2]{../data/00000474.jpg}
-\includegraphics[scale=0.2]{../data/00000625.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000336.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000394.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000458.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000474.jpg}
+\includegraphics[scale=0.2]{../data/frames/00000625.jpg}
 \end{center}
 \caption{image de classe $L$ (large plan)}
 \label{classeL}
@@ -228,6 +228,22 @@ Par la suite, nous allons expliciter différentes manières d'extraire de l'info
 
 \chapter{Extraction d'information}
 \section{Extraction de contours}
+
+Cette méthode consiste à déterminer le nombre de contours détecté par des algorithmes de traitement
+d'image contenu dans \begin{itshape}OpenCV\end{itshape}\cite{opencv_library}, et d'en déduire si l'image est un \og gros plan \fg{} ou un \og large plan \fg{}.\\
+Nous effectuons 2 passes sur chaque image avec des paramétrages d'algorithmes différents afin de
+produire 2 variables par image.\\
+Dans chaque passe nous ajoutons un flou Gaussien à l'image afin d'atténuer les petits détails comme les
+traits du visage ou du décor.\\
+Ensuite, l'image est passée en niveau de gris pour être binarisée via un seuil adaptative ($\mathrm{cv::AdaptativeThreshold}$)\\
+Et enfin, on execute la fonction ($\mathrm{cv::findContours}$) avec une option différente pour chaque passe.\\
+
+La première passe extrait les contours avec l'option \begin{itshape}CHAIN\_APPRO\_NONE\end{itshape}. 
+La seconde passe extrait les contours avec l'option \begin{itshape}CHAIN\_APPROX\_SIMPLE\end{itshape}. 
+
+Les 2 informations du nombre de contours sont stockées ensuite dans un DataFrame comme descripteur
+destiné à être classifié de manière supervisée.
+
 \section{Extraction de teinte}
 \subsection{Définition}
 Hue, Saturation, Value ou HSV est un modèle qui représente la couleur (H) en fonction de la saturation (S) en gris et la luminosité (V) (Cf. figure \ref{HSV}).
@@ -317,6 +333,70 @@ supervisé.
 
 \chapter{Résultats}
 \section{Extraction de contours}
+Pour expliquer le résultat de l’extraction de contours, voici quelques exemples d'images où les contours ont été tracés avec 
+la fonction $\mathrm{cv::drawContours}$.
+
+La figure \ref{contouringG1} montrent deux exemples de contouring sur des images \og gros plan \fg{} (classe $G$), appliqué
+avec l'option \begin{itshape}CHAIN\_APPRO\_NONE\end{itshape} (première passe)
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{contouring_exemple1_classeG_passe1.png}
+\includegraphics[scale=0.5]{contouring_exemple2_classeG_passe1.png}
+\end{center}
+\caption{Contouring sur des images de classe $G$ avec l'option CHAIN\_APPRO\_NONE}
+\label{contouringG1}
+\end{figure}
+
+La figure \ref{contouringL1} montrent deux exemples de contouring sur des images \og large plan \fg{} (classe $L$), appliqué
+avec l'option \begin{itshape}CHAIN\_APPRO\_NONE\end{itshape} (première passe)
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{contouring_exemple1_classeL_passe1.png}
+\includegraphics[scale=0.5]{contouring_exemple2_classeL_passe1.png}
+\end{center}
+\caption{Contouring sur des images de classe $L$ avec l'option CHAIN\_APPRO\_NONE}
+\label{contouringL1}
+\end{figure}
+
+Il y a plus de contours dans les images \og large plan \fg{} car le décor du plateau TV est composé de beaucoup de détails.
+Cela permet de bien différencier les gros plans des plans larges mais pour quelques cas le nombre de 
+contours ne suffit pas.\\
+Pour remédier à cela, nous avons mis en place la seconde passe et dont voici les résultats pour les mêmes 
+images : 
+
+La figure \ref{contouringG2} montre deux exemples de contouring sur des images \og gros plan \fg{} (classe $G$), appliqué
+avec l'option \begin{itshape}CHAIN\_APPRO\_SIMPLE\end{itshape} (seconde passe).
+
+La figure \ref{contouringL2} montre deux 
+exemples de contouring sur des images \og large plan \fg{} (classe $L$), appliqué avec 
+l'option \begin{itshape}CHAIN\_APPRO\_SIMPLE\end{itshape}\\
+
+
+Le nombre de contours à beaucoup augmenté par rapport à la première passe, ce qui va permettre de différencier encore mieux 
+les types de plans : en effet, on note ici un très grand nombre de contours dans le décor et sur les personnages, ce qui nous permet de 
+mieux discriminer les plans larges.
+Le bandeau du bas est plus détaillé en termes de contours que pour la première passe.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{contouring_exemple1_classeG_passe2.png}
+\includegraphics[scale=0.5]{contouring_exemple2_classeG_passe2.png}
+\end{center}
+\caption{Contouring sur des images de classe $G$ avec l'option CHAIN\_APPRO\_SIMPLE}
+\label{contouringG2}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{contouring_exemple1_classeL_passe2.png}
+\includegraphics[scale=0.5]{contouring_exemple2_classeL_passe2.png}
+\end{center}
+\caption{Contouring sur des images de classe $L$ avec l'option CHAIN\_APPRO\_SIMPLE}
+\label{contouringL2}
+\end{figure}
+
 \section{Extraction de teinte}
 En prenant comme frontière de décision, la valeur calculée en \ref{hue_frontiere}, alors on obtient un taux de prédiction correcte de 78.32\%.\\
 Par ailleurs, nous avons demandé à différent classifieurs d'effectuer un apprentissage supervisé sur les moyennes de saturation. Pour cela, nous avons divisé les images
