--- a/08_donnees_multimedia-part2/Project/report_latex/report.tex
+++ b/08_donnees_multimedia-part2/Project/report_latex/report.tex
@@ -244,7 +244,7 @@ La seconde passe extrait les contours avec l'option \begin{itshape}CHAIN\_APPROX
 Les 2 informations du nombre de contours sont stockées ensuite dans un DataFrame comme descripteur
 destiné à être classifié de manière supervisée.
 
-\section{Extraction de teinte}
+\section{Extraction de saturation}
 \subsection{Définition}
 Hue, Saturation, Value ou HSV est un modèle qui représente la couleur (H) en fonction de la saturation (S) en gris et la luminosité (V) (Cf. figure \ref{HSV}).
 \begin{figure}[H]
@@ -271,6 +271,7 @@ qui varie entre le noir et le blanc.
 Nous sommes partis de l’hypothèse que les images en \og gros plan \fg{} sont plutôt gris et donc une saturation en couleur plus faible que les images en \og large plan \fg{}.\\
 La réalisation d’un histogramme sur la moyenne de saturation (Cf. Figure \ref{hue_histo}), portant sur la totalité des images, nous a permis d’identifier deux classes de type Gaussien pour modéliser nos 2 classes
 qui sont les images de type \og gros plan \fg{} et les images de type \og large plan \fg{}\\
+Nous présentons le code Python d'extraction de saturation et sa classification dans l'annexe \ref{code_python_saturation}
 \label{hue_frontiere}
 \begin{figure}[H]
 \begin{center}
@@ -326,7 +327,7 @@ avant la couche de classification.
 Cette technique est connue sous le nom de \begin{itshape}Transfer Learning\end{itshape} \cite{DBLP:journals/corr/YosinskiCBL14} 
 et a fait ses preuves dans le cas de réseaux de neurones entrainé sur la base 
 d'images \begin{itshape}ImageNet\end{itshape} \cite{imagenet_cvpr09}.
-Cette base de près de 10 millins d'images, contient une multitude de classes (animaux,ustensiles,humains,...) organisées hiérarchiquement, 
+Cette base de près de 10 millions d'images, contient une multitude de classes (animaux,ustensiles,humains,...) organisées hiérarchiquement, 
 et on peut espérer que les gros plans (classe $G$) correspondent à l'une de ces classes,et de même pour les images plan 
 large (classe $L$), de telle sorte qu'on puisse ensuite séparer les descripteurs via un classifieur 
 supervisé.
@@ -540,6 +541,97 @@ linear SVM - L1 penalty - dual=False & 1.0 & 1.150 & 0.011\\
 \caption{Résultats de classification supervisée sur les descripteurs $Overfeat$}
 \label{Table_resultats_overfeat}
 \end{table}
+\clearpage
+
+\appendix
+\chapter{Code Python pour l'extraction de saturation et sa classification}\label{code_python_saturation}
+\begin{verbatim}
+import numpy as np
+import cv2
+import os
+import matplotlib.pyplot as plt
+import shutil
+import pandas as pd
+
+saturation = []
+path='c:/tmp/images_debat/'
+dirs = os.listdir(path)
+file_valid='c:/tmp/labels.csv'
+# This would print all the files and directories
+for file in dirs:
+    if file.endswith((".jpg")):
+        colorImage = cv2.imread(path+file)
+        #print ('Traitement du fichier : ',path+file)
+        rows, cols, nbChannels = colorImage.shape
+
+        b,g,r = cv2.split(colorImage)
+        colorImage=cv2.merge([r,g,b])
+        color = ('b','g','r')
+        clorImageHSV=cv2.cvtColor(colorImage, cv2.COLOR_BGR2HSV)
+        h,s,v=cv2.split(clorImageHSV)
+        sm=np.mean(s)
+        saturation.append(sm)
+        #if file == '00000108.jpg' or file == '00000110.jpg' or file == '00000147.jpg':
+            #print ('saturation pour le fichier 108 - 110 -147:')
+            #print sm
+
+globalMean = np.mean(saturation)
+print ('Moyenne globale:')
+print globalMean
+#print saturation
+plt.hist(saturation, range = (35, 85), bins = 30, color = 'yellow',
+            edgecolor = 'red')
+plt.xlabel('Moyenne de la saturation')
+plt.ylabel('nombre images')
+plt.title('Histogramme saturation')
+#hist=np.histogram(saturation)
+#plt.bar(hist)
+plt.show()
+copyPathGrosPlan='c:/tmp/GrosPlan/'
+copyPathLargePlan='c:/tmp/LargePlan/'
+classif=pd.DataFrame(columns=('file_name', 'label'))
+classif_multi=pd.DataFrame(columns=('file_name', 'sm'))
+line = 0;
+for file1 in dirs:
+    if file1.endswith((".jpg")):
+        colorImage = cv2.imread(path+file1)
+        rows, cols, nbChannels = colorImage.shape
+
+        r,g,b = cv2.split(colorImage)
+        colorImage=cv2.merge([r,g,b])
+        color = ('b','g','r')
+        clorImageHSV=cv2.cvtColor(colorImage, cv2.COLOR_BGR2HSV)
+        h,s,v=cv2.split(clorImageHSV)
+        sm=np.mean(s)
+        classif_multi.loc[line]=(file1,sm)
+        #Gros plan
+        if  sm <= (globalMean):
+             classif.loc[line]=(file1,-1.)            
+        #Large plan
+        else:
+            classif.loc[line]=(file1,1.)            
+        
+        line = line+1
+
+classif.sort_values(['file_name'])
+#print classif            
+#Open the labelled file
+labelfile = open(file_valid)
+label_img = pd.read_csv(labelfile,sep=';', names=['file_name', 'label'],header=0,dtype={'label': float})
+label_img.sort_values(['file_name'])
+#print label_img
+
+correct_predict = pd.merge(classif, label_img, on=['file_name', 'label'], how='inner')
+#print len(correct_predict)
+#print len(label_img)
+print ('Resultat :', (float(len(correct_predict))/float(len(label_img)))*100.)
+#print classif_multi
+#print label_img
+label_img_mrg = pd.merge(classif_multi, label_img, on=['file_name'], how='inner')
+label_img_mrg = label_img_mrg.drop('file_name', 1)
+#print label_img_mrg
+label_img_mrg.to_csv('C:\perso\TP\Son-Image\classif_multi.csv', sep=';', encoding='utf-8')
+\end{verbatim}
 
 \backmatter
 
